[package]
name = "examples_io_event_loop"
version = "0.1.0"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimio = {git = "https://github.com/cfsamson/examples-io-eventloop", branch = "dev"}